# fma

./: CMakeLists.txt
src/: bench_fma.cpp  madd.h  test_fma.cpp
